[metadata]
name = radioscripts
version = attr: radioscripts.VERSION
author = Ivan Frolov
description = Console application to compile Radio Music eurorack module compatible stations from UbuWeb Sound catalog
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ivofrolov/radio-scripts

[options]
packages =
    radioscripts
package_dir =
    =src

[options.entry_points]
console_scripts =
    radioscripts = radioscripts.cli:entrypoint
